--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "tsc && node lib/index.js",
-		"format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
 		"lint": "tslint -p tsconfig.json",
 		"prepare": "npm run build",
 		"preversion": "npm run lint",
-		"version": "npm run format && git add -A src",
-		"postversion": "git push && git push --tags"
+		"version": "git add -A src",
+		"postversion": "git push && git push --tags",
+		"final": "npm run prepare && npm run preversion && npm run version && npm run postversion"
 	},
 	"files": [
 		"lib/**/*"
@@ -32,9 +32,7 @@
 	"homepage": "https://github.com/faustyn-p/yeelight-service#readme",
 	"devDependencies": {
 		"@types/node": "^14.0.11",
-		"prettier": "^2.0.5",
 		"tslint": "^6.1.2",
-		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.9.5"
 	},
 	"dependencies": {
