--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "yeelight-service",
 	"version": "0.0.6",
 	"description": "Node Yeelight service.",
-	"main": "./lib/yeelight.service.js",
-	"types": "./lib/yeelight.interface",
+	"main": "lib/yeelight.service.js",
+	"types": "lib/yeelight.service",
 	"scripts": {
 		"build": "tsc",
 		"start": "tsc && node lib/yeelight.service.js",
@@ -11,7 +11,7 @@
 		"version": "npm run build && npm run lint"
 	},
 	"files": [
-		"./lib/"
+		"lib/"
 	],
 	"repository": {
 		"type": "git",
