--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "es5",
 		"module": "commonjs",
 		"declaration": true,
-		"outDir": "./lib/",
+		"outDir": "lib/",
 		"strictNullChecks": false,
 		"strict": false
 	},
